# Workshop003_Data_and_AI_Engineering

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
artifacts/models/: model.pkl
notebooks/: 01_EDA_ml.ipynb  02_model_training.ipynb
src/database/: db_operations.py
src/feature_selection/: df_cleaned.py
src/model_consumer/: model_predict.py
src/streaming/: kafka_functions.py
