[tool.poetry]
name = "workshop003-data-and-ai-engineering"
version = "0.1.0"
description = "Data And AI in data streaming with scikit-learn and kafka"
authors = ["Juan Andrés Ruiz Muñoz <143564687+JuanRuizIng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
